# reddit-badges

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: daily_run.yaml  release.yaml
src/: configuration.rs  environment.rs  lib.rs  main.rs  reddit.rs
